tests/ui/compile-fail/pin_data/selfref_invalid_attr.stderr
error: variance marker can only be specified once
 --> tests/ui/compile-fail/pin_data/selfref_invalid_attr.rs:6:7
  |
6 |     #[not_covariant] // Duplicate variance attribute
  |       ^^^^^^^^^^^^^

error: `non_exist` is neither a lifetime in generics nor a field name
 --> tests/ui/compile-fail/pin_data/selfref_invalid_attr.rs:7:15
  |
7 |     #[borrows(non_exist, mut non_exist_mut)] // Borrows non-existent fields
  |               ^^^^^^^^^

error: `non_exist` is neither a lifetime in generics nor a field name
  --> tests/ui/compile-fail/pin_data/selfref_invalid_attr.rs:10:16
   |
10 |     implicit: &'non_exist u32,
   |                ^^^^^^^^^^

error: `non_exist_mut` is neither a lifetime in generics nor a field name
 --> tests/ui/compile-fail/pin_data/selfref_invalid_attr.rs:7:30
  |
7 |     #[borrows(non_exist, mut non_exist_mut)] // Borrows non-existent fields
  |                              ^^^^^^^^^^^^^

error[E0261]: use of undeclared lifetime name `'non_exist`
  --> tests/ui/compile-fail/pin_data/selfref_invalid_attr.rs:10:16
   |
10 |     implicit: &'non_exist u32,
   |                ^^^^^^^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'non_exist` here
   |
 4 | struct InvalidAttr<'non_exist, 'a> {
   |                    +++++++++++

error[E0261]: use of undeclared lifetime name `'non_exist`
  --> tests/ui/compile-fail/pin_data/selfref_invalid_attr.rs:10:16
   |
10 |     implicit: &'non_exist u32,
   |                ^^^^^^^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'non_exist` here
   |
10 |     implicit<'non_exist>: &'non_exist u32,
   |             ++++++++++++
help: consider introducing lifetime `'non_exist` here
   |
 4 | struct InvalidAttr<'non_exist, 'a> {
   |                    +++++++++++
